--- a/rules.yml
+++ b/rules.yml
@@ -1,5 +1,5 @@
 groups:
-  - name: cpu_utilization_ratio
+  - name: cpu_computation
     rules:
-    - record: job:cpu_percentage_usage:avg_per_minute
-      expr: avg without (cpu) (1 - rate(node_cpu_seconds_total{mode="idle"}[1m]))
+    - record: job:idle_cpu_seconds:avg_per_minute
+      expr: avg without(cpu)(rate(node_cpu_seconds_total{mode="idle"}[1m]))
