--- a/rules.yml
+++ b/rules.yml
@@ -20,3 +20,8 @@ groups:
     - alert: node_exporter_status
       expr: up{job ='node_exporter_1'} == 0
       for: 2m
+      labels:
+        sevirity: CRITICAL
+      annotations:
+        summary: "NODE DOWN NODE DOWN I REPEAT NODE DOWN"
+        description: "Might as well close down your business bruv... alert sevirity is {{$labels.sevirity}}, alert got raised for instance {{$labels.instance}}"
